Add SQL.js dependency and update database references
- Added sql-wasm.wasm file for SQL.js functionality.
- Updated Jupyter notebook to reference the correct database path.
- Included sql.js as a dependency in package.json and package-lock.json.

--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "homepage": "https://github.com/yvanvds/DataBeheer#readme",
   "devDependencies": {
     "monaco-editor": "^0.54.0"
+  },
+  "dependencies": {
+    "sql.js": "^1.13.0"
   }
 }
