--- a/book/_config.yml
+++ b/book/_config.yml
@@ -12,28 +12,28 @@ execute:
   stderr_output:     show                            # Default value (line can be removed), shows stderr output, configuration part of Jupyter Book (https://jupyterbook.org/en/stable/customize/config.html)
 
 html:
+  use_multitoc_numbering    : true                  # Default value (line can be removed), sets continuous numbering across parts/chapters, configuration part of Jupyter Book (https://jupyterbook.org/en/stable/customize/config.html). Same functionality per section can be defined with sphinx-external-toc (https://sphinx-external-toc.readthedocs.io/en/latest/intro.html)
   extra_head: |
-    <!-- Tell our scripts where _static lives, with a path that works on GH Pages and locally -->
-    <script>window.__STATIC_BASE__ = "{{ pathto('_static', 1) }}";</script>
-
-    <!-- Monaco AMD loader from the correct path -->
-    <script src="{{ pathto('_static/monaco/vs/loader.js', 1) }}"></script>
-
-    <!-- Our CSS (portable path) -->
-    <link rel="stylesheet" href="{{ pathto('_static/sql-editors.css', 1) }}">
-
+    <!-- Monaco AMD loader -->
+    <script src="/_static/monaco/vs/loader.js"></script>
+    <link rel="stylesheet" href="/_static/sql-editors.css">
   extra_footer: |
-    <!-- Our enhancer (portable path) -->
-    <script type="module" src="{{ pathto('_static/sql-editors.js', 1) }}"></script>
+    <!-- Our enhancer that turns SQL code-cells into Monaco editors -->
+    <script type="module" src="/_static/sql-editors.js"></script>
 
 sphinx:                                              # Options passed on to the underlying sphinx-parser
-  extra_extensions: []                                 # Sets a list of extensions to load by sphinx, configuration part of Sphinx (https://www.sphinx-doc.org/en/master/index.html)
-    #- teachbooks_favourites                          # Gives you a starter package of extensions to use in your book, replace with individual extensions if you prefer some extensions not to be included (https://github.com/TeachBooks/TeachBooks-Favourites)
+  extra_extensions:                                  # Sets a list of extensions to load by sphinx, configuration part of Sphinx (https://www.sphinx-doc.org/en/master/index.html)
+    - teachbooks_favourites                          # Gives you a starter package of extensions to use in your book, replace with individual extensions if you prefer some extensions not to be included (https://github.com/TeachBooks/TeachBooks-Favourites)
   local_extension: null                              # Sets a a list of local extensions to load by sphinx, configuration part of Sphinx (https://www.sphinx-doc.org/en/master/index.html)
   config:
-    language: en                                     # Defines language (English) of everything except the content itself. For Dutch: replace with `nl`, configuration part of Sphinx (https://www.sphinx-doc.org/en/master/index.html)
+    language: nl                                     # Defines language (English) of everything except the content itself. For Dutch: replace with `nl`, configuration part of Sphinx (https://www.sphinx-doc.org/en/master/index.html)
+    html_js_files:
+    - https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.4/require.min.js # Required for live code, part of TeachBooks-Sphinx-Thebe (https://teachbooks.io/manual/features/live_code.html)
+    thebe_config:
+      use_thebe_lite: false                          # Required for live code, part of TeachBooks-Sphinx-Thebe (https://teachbooks.io/manual/features/live_code.html)
+      exclude_patterns: ["**/_*.yml", "**/*.md", "**/*.ipynb"] #exclude files which should not be accessible for live code, configuration part of TeachBooks-Sphinx-Thebe (https://teachbooks.io/manual/features/live_code.html)
     html_favicon: "figures/TB_favicon.ico"           # Replace this with your own favicon, configuration part of Sphinx (https://www.sphinx-doc.org/en/master/index.html)
-    html_baseurl:  "https://yvanvds.github.io/DataBeheer/"    # Replace this with your own URL, configuration part of Sphinx (https://www.sphinx-doc.org/en/master/index.html)
+    html_baseurl:  "hhttps://yvanvds.github.io/DataBeheer/"    # Replace this with your own URL, configuration part of Sphinx (https://www.sphinx-doc.org/en/master/index.html)
     html_theme_options:
       logo:
         text:        Databeheer                        # Replace this with your own book title, configuration part of Sphinx (https://www.sphinx-doc.org/en/master/index.html)
@@ -45,7 +45,8 @@ sphinx:                                              # Options passed on to the 
       use_edit_page_button:  true                    # Replace with false if you don't want the edit page button (i.e. if you don't user to propose changes themselves or have a private repo), configuration part of Jupyter Book (https://jupyterbook.org/en/stable/customize/config.html)
       use_repository_button: true                    # Replace with false if you don't want the repository button (i.e. if you have a private repo), configuration part of Jupyter Book (https://jupyterbook.org/en/stable/customize/config.html)
       use_issues_button :    true                    # Replace with false if you don't want the issues button (i.e. if you don't want to use GitHub issues or have a private repo), configuration part of Jupyter Book (https://jupyterbook.org/en/stable/customize/config.html)
-                               # Required for live code, part of TeachBooks-Sphinx-Thebe (https://teachbooks.io/manual/features/live_code.html)
+      launch_buttons:
+        thebe: false                                  # Required for live code, part of TeachBooks-Sphinx-Thebe (https://teachbooks.io/manual/features/live_code.html)
       announcement: ""                               # Default value (line can be removed), sets a banner announcement at the top of the site, configuration part of Jupyter Book (https://jupyterbook.org/en/stable/customize/config.html)
     html_show_copyright:   false                     # As the copyright is included in the author field, configuration part of Sphinx (https://www.sphinx-doc.org/en/master/index.html)
     html_last_updated_fmt: '%B %-d, %Y'              # Adds the date of the last update to the footer, configuration part of Sphinx (https://www.sphinx-doc.org/en/master/index.html)
