--- a/book/_config.yml
+++ b/book/_config.yml
@@ -17,6 +17,7 @@ html:
     <script>window.__STATIC_BASE__ = "{{ pathto('_static', 1) }}";</script>
     <script src="{{ pathto('_static/monaco/vs/loader.js', 1) }}"></script>
     <link rel="stylesheet" href="{{ pathto('_static/sql-editors.css', 1) }}">
+    <link rel="modulepreload" href="{{ pathto('_static/sql-overlay.js', 1) }}">
   extra_footer: |
     <script type="module" src="{{ pathto('_static/sql-editors.js', 1) }}"></script>
 
