--- a/book/_config.yml
+++ b/book/_config.yml
@@ -16,6 +16,7 @@ html:
   extra_head: |
     <script>window.__STATIC_BASE__ = "{{ pathto('_static', 1) }}";</script>
     <script src="{{ pathto('_static/monaco/vs/loader.js', 1) }}"></script>
+    <!-- Restore AMD and normalize the global name -->
     <link rel="stylesheet" href="{{ pathto('_static/sql-editors.css', 1) }}">
     <link rel="modulepreload" href="{{ pathto('_static/sql-overlay.js', 1) }}">
   extra_footer: |
